--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,16 +22,38 @@ body{
     left: 0px;
     width: 100%;
     margin: 0 auto;
-    padding: 20px;
     background-color: var(--background-color-blue);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-.banner h1{
+.banner h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
     text-align: center;
+}
+
+.banner button {
+    background: rgba(255, 255, 255, 0.2);
+    color: var(--primary-color);
+    border: none;
+    padding: 14px 28px;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    right: 60px;
+    top: 26px;
+    position: absolute;
+}
+
+.banner button:hover {
+    background: rgba(255, 255, 255, 0.3);
+    transform: translateY(-2px);
 }
 
 .form-container {
