--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,15 @@
 </head>
 <body>
     <div class="banner">
-        <h1>CPS Showcase</h1>
-        <button class="refresh" onclick="">Refresh</button>
+        <h1>2025 Annual Robotics Showcase</h1>
+        <div class="banner-left">
+            <button class="refresh" onclick="">Refresh</button>
+            <%if (locals.update) {%>
+                <p>Needs to be updated</p>
+            <%} else {%>
+                <p>Updated!</p>
+            <%}%>
+        </div>
     </div>
     
     <div class="form-container">
