all requirements finished
requires testing

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,34 +19,22 @@
         <h1>2025 Annual Robotics Showcase</h1>
         <div class="banner-left">
             <button class="refresh" onclick="updateSheet()">Refresh</button>
-            <%if (locals.update) {%>
-                <p>Needs to be updated</p>
-                <%locals.update = false%>
-            <%} else {%>
+            <%if (locals.updated) {%>
                 <p>Updated!</p>
+            <%} else {%>
+                <p>Needs to be updated</p>
             <%}%>
         </div>
     </div>
-    <% if(messages = locals.flash) { %>
-        <div class="flash-messages">
-            <% if(messages.error) { %>
-                <div class="flash-message error">
-                    <%= messages.error %>
-                </div>
-            <% } %>
-            <% if(messages.success) { %>
-                <div class="flash-message success">
-                    <%= messages.success %>
-                </div>
-            <% } %>
-        </div>
-    <% } %>
     <div class="form-container">
         <h1>Welcome!</h1>
+        <% if (message && message.length) { %>
+            <div class="error"><%= message[0] %></div>
+        <% } %>
         <form action="/home" method="POST">
             <input type="text" name="name" placeholder="Name" required>
-            <input type="text" name="FLLteamnum" placeholder="Team Number" required>
-            <input type="text" name="robotNumber" placeholder="Robot" required>
+            <input type="text" name="teamNumber" placeholder="Team Number" required>
+            <input type="text" name="barcode" placeholder="Robot" required>
             <select class="custom-select" name="checking" required>
                 <option value="in">Checking In</option>
                 <option value="out">Checking Out</option>
@@ -56,7 +44,13 @@
     </div>
     <script>
         function updateSheet() {
-            
+            fetch('/api/update-sheet', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+            .then(locals.updated = false);
         }
     </script>
 </body>
