added more questions for checking out a robot
due to not having data for team number, school, and coach, we are going to ask students directly.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,6 +34,8 @@
         <form action="/home" method="POST">
             <input type="text" name="name" placeholder="Name" required>
             <input type="text" name="teamNumber" placeholder="Team Number" required>
+            <input type="text" name="school" placeholder="School" required>
+            <input type="text" name="coach" placeholder="Coach" required>
             <input type="text" name="barcode" placeholder="Robot" required>
             <select class="custom-select" name="entryType" required>
                 <option value="in">Checking In</option>
