updated code for barcode saving
barcodes return the robot signifiers and not a set of numbers so the code directly saves it without a json file to find a robot signifier.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
             <input type="text" name="teamNumber" placeholder="Team Number" required>
             <input type="text" name="school" placeholder="School" required>
             <input type="text" name="coach" placeholder="Coach" required>
-            <input type="text" name="barcode" placeholder="Robot" required>
+            <input type="text" name="robot" placeholder="Robot" required>
             <select class="custom-select" name="entryType" required>
                 <option value="out">Checking Out</option>
                 <option value="in">Checking In</option>
