simplified to just a school dropdown input
got school+coach data. will create a private repo with credentials and school.json for web server on raspberry pi

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,8 +33,12 @@
         <% } %>
         <form action="/home" method="POST">
             <input type="text" name="name" placeholder="Name" required>
-            <input type="text" name="school" placeholder="School" required>
-            <input type="text" name="coach" placeholder="Coach" required>
+            <select class="custom-select" name="school" required>
+                <option value="" disabled selected>Select School</option>
+                <% schools.forEach(function(school) { %>
+                    <option value="<%= school.school %>"><%= school.school %></option>
+                <% }); %>
+            </select>
             <input type="text" name="robot" placeholder="Robot" required>
             <select class="custom-select" name="entryType" required>
                 <option value="out">Checking Out</option>
